[package]
name = "dsg-service"
version = "0.5.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Rust dsg-service package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "=0.4.16"
async-std = { version = "1.8", features = ["std"] }
async-trait = "0.1.53"
async-recursion = "1.0.0"
sha2 = "0.10.6"
rand = "0.8.5"

cyfs-base = "0.6"
cyfs-debug = "0.6"
cyfs-util = "0.6"
cyfs-bdt = "0.6"
cyfs-lib = "0.7"
cyfs-task-manager = "0.6"

cyfs-dsg-client = {path="../cyfs-dsg-client"}
config = "0.13.1"
